kube-frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontent-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: kube-frontend
          image: mikereem/kube-frontend:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-json
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
              readOnly: true
      volumes:
        - name: config-json
          configMap:
            name: frontend-configmap
